--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #222;
   padding: 1rem 2rem;
   color: #fff;
   position: relative;
@@ -187,14 +186,18 @@ body {
 .large-banner {
   position: relative;
   width: 100%;
-  height: 320px; 
-  background-image: url('https://t3.ftcdn.net/jpg/06/32/90/44/360_F_632904407_iPLi90WdjZ0oKAeRiL98gEIeHIUtzWae.jpg');  /* Background color (or replace with background image) */
+  height: 80vh;
+  background-image: url('https://t3.ftcdn.net/jpg/06/32/90/44/360_F_632904407_iPLi90WdjZ0oKAeRiL98gEIeHIUtzWae.jpg');
+  background-repeat: no-repeat; /* Prevent image from repeating */
+  background-size: cover;       /* Make the image cover the entire container */
+  background-position: center;  /* Center the image */
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   text-align: center;
 }
+
 
 .banner-content {
   /* Semi-transparent background for readability */
