--- a/style.css
+++ b/style.css
@@ -270,30 +270,6 @@ body {
   color: #333;
 }
 
-.timer-box {
-  display: flex;
-  align-items: center;
-  font-size: 1.5rem;
-}
-
-.timer {
-  display: flex;
-  font-size: 1.5rem;
-}
-
-.timer span {
-  padding: 10px 15px;
-  margin: 0 5px;
-  background-color: #333;
-  color: white;
-  border-radius: 5px;
-  font-weight: bold;
-}
-
-.timer span:last-child {
-  margin-right: 0;
-}
-
 /* Responsive Design for Mobile */
 @media (max-width: 768px) {
   .deals-section {
@@ -301,14 +277,6 @@ body {
     justify-content: space-between;
   }
 
-  .timer {
-    font-size: 1.5rem;
-  }
-
-  .timer span {
-    padding: 8px 12px;
-    font-size: 1rem;
-  }
 
   .deals-heading h2 {
     font-size: 1.6rem;
@@ -355,8 +323,8 @@ body {
 /* Banner Section */
 .banner {
   width: 100%;
-  height: 320px; /* Set a much higher height for the banner */
-  background-image: url('https://via.placeholder.com/1920x500'); /* Background image */
+  height: 600px; /* Set a much higher height for the banner */
+  background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20230718/pngtree-digital-retailing-illustration-laptop-keyboard-with-shopping-basket-and-e-commerce-image_3903657.jpg'); /* Background image */
   background-size: cover;
   background-position: center;
   display: flex;
